--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 body{
+    font-family:'Roboto', sans-serif;
     display:flex;
     flex-direction: column;
+    margin:0
 }
+
+.header-container, .container-one{
+    padding:0 120px 50px 120px
+}
+
+/* HEADER */
 
 .header-container{
     background: #1F2937;
-    padding:12px
+    
 
 }
 
@@ -37,7 +45,7 @@ ul{
 .right-header a{
     text-decoration: none;
     color:#E5E7EB;
-    margin-left:8px
+    margin-left:14px
 }
 
 
@@ -45,6 +53,8 @@ ul{
     display:flex;
     justify-content: space-between;
     align-items: center;
+    margin:0
+
 
 }
 
@@ -55,7 +65,7 @@ ul{
 
 
 img{
-    width:450px;
+    width:400px;
     height:300px
 }
 
@@ -63,21 +73,19 @@ img{
     font-size: 48px;
     font-weight: bolder;
     color:#F9FAF8;
-    margin:6px
     
 }
 
 .header-secondary-text{
     font-size: 18px;
     color:#F9FAF8;
-    margin:6px
 }
 
 button{
     background-color: #3882F6;
     padding:6px 15px;
-    margin:6px;
     border:none;
+    margin-top: 6px;
     color:#F9FAF8;
     font-size: 18px;
     border-radius:8px
@@ -85,6 +93,51 @@ button{
 }
 
 
+/* CONTAINER_ONE */
+
+.container-one{
+    display:flex;
+    flex-direction: column;
+    /* align-items: center; */
+    background: white;
+    padding-top:50px;
+ 
+}
+
+.container-one-top{
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
+    margin-bottom:40px;
+    text-align: center;
+
+}
+
+.container-one-bottom{
+    display:flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+
+}
+
+.card{
+    display:flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+
+.blue-box{
+    width:150px;
+    height:150px;
+    border: 4px solid #3882F6;
+    border-radius: 14px;  
+}
+
+.subtext{
+    max-width:150px;
+    text-align: center;
+}
 
 
 
