--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ ul{
 .right-header a{
     text-decoration: none;
     color:#E5E7EB;
-    margin-left:14px
+    margin-left:20px
 }
 
 
@@ -59,14 +59,14 @@ ul{
 }
 
 .header-bottom .left-header{
-    margin-right: 10px;
+    margin-right: 30px;
 
 }
 
 
 img{
-    width:400px;
-    height:300px
+    width:800px;
+    height:500px
 }
 
 .header-main-text{
@@ -96,9 +96,6 @@ button{
 /* CONTAINER_ONE */
 
 .container-one{
-    display:flex;
-    flex-direction: column;
-    /* align-items: center; */
     background: white;
     padding-top:50px;
  
@@ -128,16 +125,35 @@ button{
 
 
 .blue-box{
-    width:150px;
-    height:150px;
+    width:200px;
+    height:200px;
     border: 4px solid #3882F6;
     border-radius: 14px;  
 }
 
 .subtext{
-    max-width:150px;
+    max-width:200px;
     text-align: center;
 }
 
 
+/* CONTAINER-TWO */
 
+.container-two{
+    background:#E5E7EB;
+    padding:80px 180px 
+}
+
+.container-two-top{
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    text-align: justify;
+    margin-bottom: 4px;
+}
+
+.container-two-bottom{
+    text-align: right;
+    font-size:18px;
+    font-weight:bold
+}
