--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body{
     font-family:'Roboto', sans-serif;
     display:flex;
     flex-direction: column;
+    background:grey;
     margin:0
+ 
 }
 
 .header-container, .container-one{
@@ -14,11 +16,13 @@ body{
 .header-container{
     background: #1F2937;
     
+    
 
 }
 
 .header-top{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 70px;
@@ -51,6 +55,7 @@ ul{
 
 .header-bottom{
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin:0
@@ -60,13 +65,14 @@ ul{
 
 .header-bottom .left-header{
     margin-right: 30px;
+    width:800px
 
 }
 
 
 img{
-    width:800px;
-    height:500px
+    width:600px;
+    height:350px
 }
 
 .header-main-text{
@@ -112,8 +118,9 @@ button{
 
 .container-one-bottom{
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    /* align-items: center; */
+    
 
 }
 
@@ -156,4 +163,53 @@ button{
     text-align: right;
     font-size:18px;
     font-weight:bold
+}
+
+/* CONTAINER-THREE */
+
+.container-three{
+    background: white;
+    padding:80px 120px
+}
+
+.content{
+    background:#3882F6;
+    margin:0 80px;
+    border-radius: 12px;
+    padding:20px 50px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content-left-top{
+    font-size: 18px;
+    font-weight:bold;
+    color:#E5E7EB;
+    margin:0;
+    padding:0
+}
+
+.content-left-bottom{
+    font-size: 14px;
+    color:#E5E7EB;
+    margin:0;
+    padding:0
+}
+
+.content button{
+    border: 2px solid #E5E7EB;
+    
+}
+
+/* FOOTER */
+
+.footer{
+    background:#1F2937;
+    text-align: center;
+    padding:10px;
+    color:white;
+    font-size: 10px
+
 }
